apps/misc/excalidraw/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: excalidraw
spec:
  type: ClusterIP
  ports:
    - name: web-ui
      port: 5000
      targetPort: web-ui
